--- a/customer-config-prod.properties
+++ b/customer-config-prod.properties
@@ -1,3 +1,5 @@
+build.Version=147
+msg= Customer config messages
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 logging.level.org.springframework.security=DEBUG
 spring.datasource.url=jdbc:mysql://localhost:3306/springboot
