--- a/customer-config-prod.properties
+++ b/customer-config-prod.properties
@@ -1,7 +1,7 @@
-build.Version=147
-msg= Customer config messages
+customer-config.build.Version=147
+customer-config.msg= Customer config messages
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 logging.level.org.springframework.security=DEBUG
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot
-spring.datasource.username=root
-spring.datasource.password=Admin123$
+customer-config.spring.datasource.url=jdbc:mysql://localhost:3306/springboot
+customer-config.spring.datasource.username=root
+customer-config.spring.datasource.password=Admin123$
