--- a/customer-config-prod.properties
+++ b/customer-config-prod.properties
@@ -1,4 +1,4 @@
-customer-config.build-version=147
+customer-config.build.version=147
 customer-config.msg= Customer config messages
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 logging.level.org.springframework.security=DEBUG
