--- a/customer-config-prod.properties
+++ b/customer-config-prod.properties
@@ -2,6 +2,6 @@ customer-config.build-version=147
 customer-config.msg= Customer config messages
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 logging.level.org.springframework.security=DEBUG
-customer-config.springdatasourceurl=jdbc:mysql://localhost:3306/springboot
-customer-config.springdatasourceusername=root
-customer-config.springdatasourcepassword=Admin123$
+customer-config.springDatasource.url=jdbc:mysql://localhost:3306/springboot
+customer-config.springDatasource.username=root
+customer-config.springDatasource.password=Admin123$
